# Corners-game

./: README.md  __main__.py  pyproject.toml
checkers/: board.py  constants.py  game.py  piece.py
minimax/: algorithm.py
